# django-tailwind-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  index.html  justfile  mkdocs.yml  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml  publish_docs.yml  test.yml
base_template/: index.html
changelog/: index.html
docs/: base_template.md  changelog.md  development.md  index.md  installation.md  management_commands.md  settings.md  template_tags.md  usage.md
installation/: index.html
search/: search_index.json
settings/: index.html
src/django_tailwind_cli/: __init__.py  apps.py  conf.py  tailwind.config.js  utils.py
src/django_tailwind_cli/management/commands/: list_templates.py  tailwind.py
src/django_tailwind_cli/templates/tailwind_cli/: base.html  tailwind_css.html
src/django_tailwind_cli/templates/tailwind_cli/tags/: tailwind_css.html
src/django_tailwind_cli/templatetags/: tailwind_cli.py
template_tags/: index.html
tests/: conftest.py  settings.py  test_command.py  test_command_build.py  test_command_init.py  test_command_installcli.py  test_command_listtemplates.py  test_command_watch.py  test_conf.py  test_management_command.py  test_management_commands.py  test_subcommand_build.py  test_subcommand_watch.py  test_tailwind_css_tag.py  test_template_tag.py  test_unknown_subcommand.py  test_unknown_subcommands.py  test_utils.py
tests/__snapshots__/: test_command_listtemplates.ambr  test_tailwind_css_tag.ambr
tests/templates/tests/: base.html
usage/: index.html
