[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django_tailwind_cli"
description = "Django and Tailwind integration based on the prebuilt Tailwind CSS CLI."
authors = [{ name = "Oliver Andrich", email = "oliver@andrich.me" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "tailwind", "css"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "django>=3.2",
    "certifi>=2023.7.22,<2025.0.0",
    "django-typer>=1.1.2",
]
[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-mock",
    "django-types",
]
docs = ["mkdocs-material"]
django-extensions = ["django-extensions>=3.2", "werkzeug>=3.0"]

[project.urls]
Home = "https://django-tailwind-cli.andrich.me/"
Documentation = "https://django-tailwind-cli.andrich.me/"
Repository = "https://github.com/oliverandrich/django-tailwind-cli"

# Black
[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | ^.*\b(migrations)\b.*$
)/
'''

# Pyright
[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
ignore = ["./tests/**/*"]

# Ruff
[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "E",   # pycodestyle
    "F",   # pyflakes
    "FBT", # flake8-boolean-trap
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TID", # flake8-tidy-imports
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore complexity
    "C901",
]
unfixable = [
    # Don't touch unused imports
    "F401",
    # Don't touch unused variables
    "F841",
]

[tool.ruff.isort]
known-first-party = ["django_tailwind_cli"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"tests/snapshots/*" = ["ALL"]

# Pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
django_find_project = false
markers = ["mock_network_and_subprocess"]

# Coverage
[tool.coverage.run]
source = ["django_tailwind_cli", "tests"]
branch = true

[tool.coverage.paths]
source = ["src", ".tox/**/site-packages"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
