[project]
name = "django-tailwind-cli"
description = "Django and Tailwind integration based on the prebuilt Tailwind CSS CLI."
authors = [{ name = "Oliver Andrich", email = "oliver@andrich.me" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "tailwind", "css"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "certifi>=2023.7.22,<2025.0.0",
    "django-typer>=2.1.2",
    "django-appconf>=1.0.6",
]

[project.optional-dependencies]
django-extensions = ["django-extensions>=3.2", "werkzeug>=3.0"]

[project.urls]
Home = "https://django-tailwind-cli.andrich.me/"
Documentation = "https://django-tailwind-cli.andrich.me/"
Repository = "https://github.com/oliverandrich/django-tailwind-cli"

[tool.uv]
dev-dependencies = [
    "django-types>=0.19.1",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# Black
[tool.black]
target-version = ["py38"]
line-length = 100
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | ^.*\b(migrations)\b.*$
)/
'''

# Pyright
[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
ignore = ["./tests/**/*"]

# Ruff
[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "E",   # pycodestyle
    "F",   # pyflakes
    "FBT", # flake8-boolean-trap
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TID", # flake8-tidy-imports
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore complexity
    "C901",
]
unfixable = [
    # Don't touch unused imports
    "F401",
    # Don't touch unused variables
    "F841",
]

[tool.ruff.lint.isort]
known-first-party = ["solomon"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]
"tests/snapshots/*" = ["ALL"]
"**/migrations/*" = ["ALL"]

# Pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
testpaths = ["tests"]

# Coverage
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/migrations/*", "*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "pass",
    "if __name__ == .__main__.:",
]
